# LEDMATRIXpico

./: CMakeLists.txt  README.md
FatFs_SPI/sd_driver/: spi.c
config/: iopins.h  platform_config.h
parsescript/: picostrip.cpp
picostrip/: filesys.c  filesys.h  gifdec.c  keyapi.c  keyapi.h  picostrip.cpp
schematics/3Dbox/: LEDSTRIP v1.stl  ledstripboxtop v1.stl
sd/: script.txt
tft_t/: tft_t_dma.cpp  tft_t_dma.h
